i18n/zh-CN/docusaurus-plugin-content-docs/current/references/sdk/ethers-ext/v5/smart-contract/read.mdx
# Read

您可以通过 "调用 "RPC API 调用智能合约中的函数。 在这里可以调用的功能仅限于**视图函数**，不会改变合约中的任何状态。

<CH.Spotlight>
<CH.Code>

```js SmartContractView.js
const ethers = require("ethers");

const provider = new ethers.providers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");

/* compiled in remix.ethereum.org (compiler: 0.8.18, optimizer: false)
// SPDX-License-Identifier: UNLICENSED
pragma solidity ^0.8.13;

contract Counter {
    uint256 public number;
    event SetNumber(uint256 number);

    constructor(uint256 initNumber) {
        number = initNumber;
    }

    function setNumber(uint256 newNumber) public {
        number = newNumber;
        emit SetNumber(number);
    }

    function increment() public {
        number++;
        emit SetNumber(number);
    }
}
*/
const abi = '[{"inputs":[{"internalType":"uint256","name":"initNumber","type":"uint256"}],"stateMutability":"nonpayable","type":"constructor"},{"anonymous":false,"inputs":[{"indexed":false,"internalType":"uint256","name":"number","type":"uint256"}],"name":"SetNumber","type":"event"},{"inputs":[],"name":"increment","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"number","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"uint256","name":"newNumber","type":"uint256"}],"name":"setNumber","outputs":[],"stateMutability":"nonpayable","type":"function"}]';
const contractAddr = "0x95Be48607498109030592C08aDC9577c7C2dD505";

async function main() {
  const counter = new ethers.Contract(contractAddr, abi, provider);
  const number = await counter.number();
  console.log("number", number.toString());
}

main();
```

---

```zsh output
❯ js SmartContractView.js
number 291
```

</CH.Code>

---

导入 **ethers** 和 **@kaiachain/ethers-ext** 模块，在 ethers.js 上添加 kaia 功能。

```js SmartContractView.js focus=1

```

---

使用指定的 **kairos** 测试网 URL 设置提供程序。 以太坊中的提供者是访问区块链数据的只读抽象。

```js SmartContractView.js focus=3

```

---

此外，您还可以将提供商 URL 从 **kairos** 更改为 **quicknode**

```js SmartContractView.js focus=3
const ethers = require("ethers");

const provider = new ethers.providers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");

/* compiled in remix.ethereum.org (compiler: 0.8.18, optimizer: false)
// SPDX-License-Identifier: UNLICENSED
pragma solidity ^0.8.13;

contract Counter {
    uint256 public number;
    event SetNumber(uint256 number);

    constructor(uint256 initNumber) {
        number = initNumber;
    }

    function setNumber(uint256 newNumber) public {
        number = newNumber;
        emit SetNumber(number);
    }

    function increment() public {
        number++;
        emit SetNumber(number);
    }
}
*/
const abi = '[{"inputs":[{"internalType":"uint256","name":"initNumber","type":"uint256"}],"stateMutability":"nonpayable","type":"constructor"},{"anonymous":false,"inputs":[{"indexed":false,"internalType":"uint256","name":"number","type":"uint256"}],"name":"SetNumber","type":"event"},{"inputs":[],"name":"increment","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"number","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"uint256","name":"newNumber","type":"uint256"}],"name":"setNumber","outputs":[],"stateMutability":"nonpayable","type":"function"}]';
const contractAddr = "0x95Be48607498109030592C08aDC9577c7C2dD505";

async function main() {
  const counter = new ethers.Contract(contractAddr, abi, provider);
  const number = await counter.number();
  console.log("number", number.toString());
}

main();
```

---

设置由 solidity 代码生成的 **Abi**

```js SmartContractView.js focus=28

```

---

定义与之交互的\*\*合约地址

```js SmartContractView.js focus=29

```

---

使用 **ethers.Contract**创建合同实例，填写参数 **contractAddr**、**abi**、**provider**。 您可以通过该实例读写合约

```js SmartContractView.js focus=32

```

---

使用**counter.number()**方法从合约中获取**数字**的值

<CH.Code>
```js SmartContractView.js focus=33:34

````
---
```zsh output
❯ node SmartContractView.js
number 291
````

</CH.Code>

</CH.Spotlight>
